# glkcli

./: Cargo.toml  LICENSE  README.md  game.glksave.old  terps
!Mirror/: !Help.html  !Run  !RunImage  !Sprites
!Mirror/Data/: A  B  C  Default  M  N  O  P  X  Y  Z
!Mirror/Resources/: Config  Help  SlidingHp  Sprites22  Templates
!Mirror/SavedPosit/MERLIN/: MerlinWIZ
.github/workflows/: appimage.yml
src/: border_style.rs  config.rs  criu.rs  detect.rs  ifdb.rs  launcher.rs  main.rs  network.rs  pty.rs  pty_embedded.rs  storage.rs  tui.rs  ui.rs  utils.rs
src/app/: mod.rs  state.rs
tests/: integration_tests.rs
