[package]
name = "glkcli-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "glkcli"
path = "src/main.rs"

[features]
default = ["network-check"]
network-check = []

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
crossterm = "0.27"
log = "0.4"
env_logger = "0.10"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
zip = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
